Release 1.7.0 (#246)
* chore: update dependencies in package.json and package-lock.json

* fix(docs): add .nojekyll file for GitHub Pages deployment

* fix(docs): use BASE_URL env var for VitePress base path

* fix(ci): add build step and .nojekyll creation to deploy-docs workflow

* fix(ci): add documentation generation steps to deploy-docs workflow

* docs: include all campaign chapters in game guide

* fix(docs): update campaign guide content and hash map references

* Fix: AI settings overwrite on startup

Refactored DataInitializer to respect existing database settings for AI configuration. It now only updates settings if an environment variable is explicitly provided, preventing the overwrite of user-configured settings with defaults on every startup. Also improved the fallback logic to only enable LocalAI if all other providers are explicitly disabled.

* Remove unused file

* Fix: Sync package.json Vaadin version with pom.xml to resolve rendering issues

* docs: update README with Homebrew configuration instructions for Tomcat

* Track new bug in beads: Restrict Match View actions for non-campaign matches

* Fix: Application startup and dependency issues.

- Standardized Vaadin version to 25.0.3 across pom.xml and package.json to resolve npm install conflicts.
- Removed duplicate @Push annotation from DraftView (already in AppShell).
- Added Flyway migrations (H2 V39, MySQL V7) for new League system tables.
- Added findAll() to AccountService.
- Fixed LeagueListView grid initialization.
- Fixed ShowDetailViewTest constructor regression.

* Fix: Correct database column references in League system migrations.

* Enhance League System: Update relationships, add new roles, and improve inbox item handling

* Fix: Resolve Match View Access Denied, missing inbox notifications, and LazyInitException in League workflow

- Refactored SegmentService.canUserUpdateSegment to check ownership via DB, fixing Access Denied for stale sessions.
- Updated ShowDetailView to use 